Improve jdk11 profile